--- a/src/main.css
+++ b/src/main.css
@@ -7,7 +7,7 @@
 @tailwind utilities;
 
 #app {
-    @apply bg-gradient-to-r from-cyan-500 to-blue-500 h-[100vh] text-[45px] overflow-hidden
+    @apply bg-gradient-to-r from-cyan-500 to-blue-500 h-fit text-[45px]
 }
 
 .nav-btn {
